percent-decode lilypond references

BUG: 236967

svn path=/trunk/KDE/kdegraphics/okular/; revision=1129748